Minor fixes to weekly section, rules section, and spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -300,7 +300,7 @@ p {
 }
 
 summary {
-    list-style:none;
+    list-style: none;
     cursor: pointer;
 }
 
@@ -371,12 +371,12 @@ details {
     color: var(--lightgrey);
 }
 
-.hero-title{
+.hero-title {
     display: flex;
-    flex-direction:row;
+    flex-direction: row;
 }
 
-.hero-title h1{
+.hero-title h1 {
     font-size: 2.6rem;
     align-self: center;
 }
@@ -454,30 +454,48 @@ details {
     /* Style adjustments for high resolution devices */
 }
 
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 768px) {
     .hero-container,
     .section-weekly-container,
-    .section-rules-container{
+    .section-rules-container {
         margin: auto 1.5625rem;
 
     }
 
 
-    .hero-container{
+    .hero-container {
         width: 45%;
     }
 
 }
 
-@media only screen and (min-width: 1024px){
+@media only screen and (min-width: 1024px) {
+
+    h2 {
+        text-align: center;
+    }
+
+    .section-weekly {
+        height: 125vh;
+    }
+
     .hero-container,
     .section-weekly-container,
-    .section-rules-container{
+    .section-rules-container {
         margin: auto 3rem;
     }
 
-    .hero-container{
+    .hero-container {
         width: 35%;
+    }
+
+    .section-weekly-container {
+        margin: auto
+    }
+
+    .section-weekly-container,
+    .section-rules-container {
+        width: 45%
     }
 
     .section-about {
@@ -487,20 +505,23 @@ details {
         padding: 4.5rem;
     }
 
+
     .section-about-image {
         padding-left: 25px;
         width: 100%;
         height: auto;
         display: block;
     }
+
+
 }
 
 @media only screen and (min-width: 1013px) and (max-width: 1300px) {
-    .section-about{
+    .section-about {
         flex-direction: column;
     }
 
-    .section-about-image{
+    .section-about-image {
         padding-left: initial;
     }
 
